Fix Java 11 compiler warnings