@@ -87,7 +87,7 @@ public class GoToMemberAction extends TextAction {
 	private AbstractSourceTree createTree() {
 		AbstractSourceTree tree = null;
 		try {
-			tree = (AbstractSourceTree)outlineTreeClass.newInstance();
+			tree = (AbstractSourceTree)outlineTreeClass.getDeclaredConstructor().newInstance();
 			tree.setSorted(true);
 		} catch (RuntimeException re) { // FindBugs
 			throw re;
